resolved spacing problem big card, some css changes for the tasccardbig.css

--- a/styles/tasccardbig.css
+++ b/styles/tasccardbig.css
@@ -14,11 +14,11 @@
   position: relative;
   width: 525px;
   border-radius: 30px;
-  min-height: 871px;
   gap: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 48px;
   background-color: #ffffff;
   box-shadow: 0px 0px 4px 0px #00000029;
   animation: slideIn 100ms ease-out;
@@ -70,7 +70,6 @@
 .big_description {
   width: 445px;
   max-height: 100px;
-  min-height: 48px;
   overflow-y: auto;
   font-size: 20px;
   padding-right: 10px;
@@ -119,7 +118,6 @@
   display: flex;
   flex-direction: row;
   width: 445px;
-  height: 24px;
   font-size: 20px;
   gap: 25px;
 }
@@ -167,6 +165,8 @@
   flex-direction: column;
   width: 445px;
   padding: 7px 16px;
+  flex-grow: 1;
+  margin-bottom: 20px;
 }
 
 .big_del_txt,
@@ -177,15 +177,12 @@
 }
 
 .big_del_edit {
-  position: absolute;
-  bottom: 0;
   width: 445px;
   height: 24px;
   gap: 8px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  margin-bottom: 48px;
 }
 
 .big_del {
